kdeaccessibility (4:4.4.5-3) UNRELEASED; urgency=low

  * Fix kttsd crash on startup when there is no configured talkers. Merge the
    fix to the kcmkttsd_permanent_settings_jobmgr_fixes.diff patch as it
    triggers this crash by using broken piece of upstream code.
    (Closes: #606166)

 -- Modestas Vainius <modax@debian.org>  Tue, 07 Dec 2010 00:14:46 +0200

kdeaccessibility (4:4.4.5-2) unstable; urgency=low

  * Point debian/control Vcs fields to the new Git repository.
  * Add a series of patches to fix kttsd configuration framework which is
    completely broken. kttsd 4.4.x release is as a bunch of code which is in
    the middle of porting to speech-dispatcher from the old infrastructure.
    While the basics in the KTTS daemon work, the daemon is not configurable
    and hence unusable on the desktop. This series of patches attempts to
    address this RC shortcoming in order to make kttsd shippable in Debian
    stable (Closes: #599825). See patch headers for more information:
    - backport_kttsd_1072198_1138400.diff
    - kcmkttsd_permanent_settings_jobmgr_fixes.diff
    - kcmkttsd_support_talker_editing.diff

 -- Modestas Vainius <modax@debian.org>  Sat, 04 Dec 2010 01:31:31 +0200

kdeaccessibility (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update descriptions
  * Update email address

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 11:54:34 +0200

kdeaccessibility (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Replace usr/share/doc/kde4 references with usr/share/doc/kde.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).